Revision history for MIDI-Drummer

{{$NEXT}}
    - Fix Bézier variable names.

0.1600 2020-08-31 15:06:44
    - Add a Bézier curve option to the ->crescendo_roll.

0.1502 2020-08-31 07:59:16
    - Fix the ->crescendo_roll logic replacing start-span with min-max (or max-min).

0.1501 2020-08-30 13:26:09
    - Fix ->crescendo_roll documentation.

0.1500 2020-08-30 13:17:38
    - Add the ->crescendo_roll method.

0.1400 2020-08-23 12:21:18
    - Fix eg/reggae.
    - Add the ->flam method.

0.1300 2020-08-23 09:58:26
    - Improve documentation.
    - Improve ->roll and ->set_time_sig code.
    - Add 32nd, 64th and 128th Music::Duration specs.
    - Add the ->roll method.
    - Add the eg/crescendo program.
    - Improve eg/reggae.

0.1201 2020-08-22 15:26:43
    - Fix the eg/waltz beat figure.
    - Add a fill to the beginning of eg/reggae.
    - Simplify the ->accented_note method.

0.1200 2020-08-22 10:21:34
    - Add the eg/fool-in-the-rain example program.
    - Consolidate the metronomes into a single program.
    - Remove the unneeded effects: reverb, chorus and pan.
    - Add a 6/8 metronome beat.
    - Add all remaining named percussion patches.

0.1101 2020-08-17 09:34:01
    - Improve the halftime shuffle example program.
    - Add 7/4 and 7/8 metronomes.

0.1100 2020-08-14 17:19:40
    - Add the ->accent_note method.
    - Add an example program illustrating the James Brown, "Cold Sweat" groove.

0.1001 2020-08-11 07:02:59
    - Add eg/waltz. Why not?
    - Remove a mistaken hihat from ->metronome54.

0.1000 2020-08-10 12:34:49
    - Add dotted duration aliases.
    - Add the ->set_time_sig method.

0.0904 2020-08-08 08:42:46
    - Use the closed hi-hat for the 4/4 metronome.

0.0903 2020-08-08 08:26:24
    - Add 5/4 and 5/8 metronomes and an example program.
    - Add a halftime "Purdie" shuffle example program.

0.0902 2020-06-09 10:19:42
    - Improve documentation.
    - Add an eighth-note flag to ->metronome44.

0.0901 2020-06-08 16:47:53